# Practice_Pal

./: .gitignore  LICENSE  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 085b515ed61e_initial_upgade.py  21f0d4c2e512_removed_duration_column_and_added_.py  24b4efc938e6_added_event_listener_to_duration_column_.py  25478f344db7_added_default_parameter_to_practice_.py  3c69ea83e3db_initial_revision.py  4f6da8d94649_added_asyncattrs_to_declarative_base_.py  52df1d716a82_added_event_listener_to_duration_column_.py  63942a6aa5f4_added_goals_column_to_the_practice_.py  700f8b6b5f0e_added_event_listener_to_duration_column_.py  79863c8a3c5a_added_event_listener_to_duration_column_.py  898f49462495_trying_to_add_goals_column_to_practice_.py  9fc2bc1bfeaf_added_cascade_effect_on_goal_and_.py  aa69f438f832_adding_the_mapped_construct_to_follow_.py  c87707b270e5_removed_default_parameter_to_practice_.py  cd2aba6a59fa_adding_the_mapped_construct_to_follow_.py  d5ff06300d4b_removing_date_column_from_practice_.py  f471d191cfc2_updated_practice_session_table_to_have_.py
app/: app.py  db.py  schemas.py  settings.py  users.py
app/routers/: goals.py  sessions.py
